playing with html

--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@ however I am always interested in improving it in some basic way.</p>
 <pre><code>http://freshmeat.net/projects/vee-the-blog-tool
 </code></pre>
 
-<p>Version: 0.9.9-zeta                                                           </p>
+<p>Version: 0.9.9-zeta                                                        </p>
 
 <p>Usage:<br>
   See below.                                                                  </p>
 
 <p>Options:<br>
+<pre>
   -b                batch mode; used when piping in msg via stdin<br>
   -B  file          define bottom template; default is ./vee-bottom.tpl<br>
   -c  [1-9\d*]      specify the number of characters 'fold' allows per line<br>
@@ -82,12 +83,13 @@ however I am always interested in improving it in some basic way.</p>
                     posts that are listed with -p;<br>
   -r  [1-9\d</em>]      reformats the Nth latest post<br>
   -R                reformats <em>all</em> .vee/*.raw files; -c applies as well<br>
-  -s  summary     placed below title in INDEX<br>
+  -s  summary       placed below title in INDEX<br>
   -t  'title'       specify title at commandline and avoid annoying default prompt
   -T  file          define top template; default is ./vee-top.tpl<br>
   -v                version and exit<br>
   -x  filter        defines filter if not using default ./vee-pre; filter<br>
                     must be executable, i.e., chmod 755 vee-pre</p>
+</pre>
         </section>
 
         <footer>
