--- a/index.html
+++ b/index.html
@@ -3,28 +3,15 @@
 <head>
 <title>vee is a zero-conf, command line microblogging tool</title>
 
-<LINK REL="SHORTCUT ICON" HREF="/favicon.ico" type="image/x-icon">
-<LINK REL="ICON"          HREF="/favicon.ico" type="image/x-icon">
-
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-
-<link rel="stylesheet" href="http://www.0x743.com/style.css" type="text/css">
-
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-1688064-1";
-urchinTracker();
-
-    if (top.location!= self.location) {
-      top.location = self.location.href
-    }
-
-</script>
-<style>
-#vee { overflow: auto; width: 100%; height: 2000px; border: dashed }
-</style>
-
+<meta charset='utf-8'>
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+<!--[if lt IE 9]>
+<![endif]-->
 </head>
 <body>
 
@@ -43,17 +30,27 @@ urchinTracker();
       <p/>
 
       <a href=https://github.com/estrabd/vee>Vee on Github repo!</a>
+      <p/>
 
-      <table><tr><td bgcolor=grey> Vee is a command line blog tool that is very portable across Unix systems. It provides an interactive as well as a batch interface to maintain a log of entries. Formatting is done using a module architecture that allows a high degree of customization. There are minimal flags and no set up is required. </td></tr></table>
-      <p/>Found a <a href="https://github.com/estrabd/vee/issues">BUG or have a feature REQUEST</a>?
-      <br/>
-      <br/>
-      <font color="darkgreen">Check out the latest release</font>:
-      <br/>
-      <table><tr><td bgcolor=silver> <tt>svn export http://vee.googlecode.com/svn/tags/0.9.9-zeta vee-0.9.9-zeta</tt> </td></tr></table>
-      <br/>
-      <b>Note, now on Github!</b> Check out the <font color="maroon">bleeding edge</font>:
-      <br/>
+        <section id="downloads" class="clearfix">
+          <a href="https://github.com/estrabd/vee/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/estrabd/vee/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/estrabd/vee" id="view-on-github" class="button"><span>View on GitHub</span></a>
+        </section>
+
+        <section id=main_content>
+         <p/>Vee is a command line blog tool that is very portable across Unix systems. It provides an interactive as well as a batch interface to maintain a log of entries. Formatting is done using a module architecture that allows a high degree of customization. There are minimal flags and no set up is required. </td></tr></table>
+         <p/>Found a <a href="https://github.com/estrabd/vee/issues">BUG or have a feature REQUEST</a>?
+         <br/>
+         <br/>
+         <font color="darkgreen">Check out the latest release</font>:
+         <br/>
+         <table><tr><td bgcolor=silver> <tt>svn export http://vee.googlecode.com/svn/tags/0.9.9-zeta vee-0.9.9-zeta</tt> </td></tr></table>
+         <br/>
+         <b>Note, now on Github!</b> Check out the <font color="maroon">bleeding edge</font>:
+         <br/>
+        </section>
+
       <table><tr><td bgcolor=silver> <tt>git clone git://github.com/estrabd/vee.git</tt> </td></tr></table>
       <br/>
       Don't feel like installing vee? 
