--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<table cellpadding="5" width=80% align=center>
+<table cellpadding="5" width=80%>
   <tr>
     <td valign="top" width="100">
       <table WIDTH="145" BORDER="0" CELLSPACING="0" CELLPADDING="5">
