adding gh-pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
          from others.
         </section>
 
-<b>All Options</b> 
+<p/><b>All Options</b> 
 <font color="green">
 <pre>
 Usage:                                                                        
