--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>vee is a zero-conf, command line microblogging tool</title>
+<title>[ARCHIVED] vee is a zero-conf, command line microblogging tool</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <meta charset='utf-8'>
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+<h1>GH HAS BEEN ARCHIVED AND MAINTAINERSHIP BY ANOTHER, <a href=https://git.sdf.org/pifty/vee>https://git.sdf.org/pifty/vee</a>.</h1>  
+  
 <table cellpadding="5" width=80%>
   <tr>
     <td valign="top" width="100">
